<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_banner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_banner"
        android:layout_marginTop="50dp"/>

    <com.tradplus.ads.mobileads.TradPlusView
        android:id="@+id/banner_view"
        android:layout_width="320dp"
        android:layout_height="50dp"
        />

    <Button
        android:id="@+id/btn_native"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_native"
         />

    <com.tradplus.ads.mobileads.TradPlusView
        android:id="@+id/native_view"
        android:layout_width="320dp"
        android:layout_height="340dp"

        />

    <Button
        android:id="@+id/btn_interstitial_load"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btn_interstitial_load" />
    <Button
        android:id="@+id/btn_interstitial_show"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btn_interstitial_show"
     />
    <Button
        android:id="@+id/btn_reward_load"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btn_reward_load"
     />
    <Button
        android:id="@+id/btn_reward_show"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/btn_reward_show"
     />

</LinearLayout>